Paste is wonky
I've noticed a few times now that pasting, especially into nano, can somehow mangle whitespace
Given this works in g-t I suspect we are feeding data wrong somehow
I've noticed a few times now that pasting, especially into nano, can somehow mangle whitespace
Given this works in g-t I suspect we are feeding data wrong somehow