terminal: improve text pasting

Vte's new `vte_terminal_paste_text` lets us do this properly, bringing
pasting inline with g-t

Fix: https://gitlab.gnome.org/ZanderBrown/kgx/-/issues/49
Fix: https://gitlab.gnome.org/ZanderBrown/kgx/-/issues/21